# zero-one

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: rust-clippy.yml
docs/: ISSUE_TEMPLATE.md  MIGRATIONS.md  ROADMAP.md  TITLE_PREFIXES.md
tools/migration-creator/: README.md  pyproject.toml
tools/migration-creator/migration_creator/: cli.py  diff.py  migrations_state.py  models_parser.py  naming.py  paths.py  types.py  validate.py  writer.py
workspaces/: zero-one.code-workspace
zero-one/: package.json
zero-one/src-tauri/: Cargo.toml
zero-one/src-tauri/src/: lib.rs
